[MOSIP-33143]
Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>